Use Path instead of URL for plugin interface